force-app/main/default/objects/Apttus__ReviewCycle__c/Apttus__ReviewCycle__c.object-meta.xml
<CustomObject>
    <description>Represents a review cycle created for parallel review of a document.</description>
    <label>Review Cycle</label>
    <nameField>
        <label>Review Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Cycles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>