force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__Comment__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comment__c</fullName>
    <description>Comment on canceling or Ending the Review Cycle.</description>
    <inlineHelpText>Comment on canceling or Ending the Review Cycle.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>