force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__EmailBody__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EmailBody__c</fullName>
    <description>Holds the body of the email sent during Review.</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>