force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EmailSubject__c</fullName>
    <description>Holds the email subject of the email sent during Review.</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>