force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__EndedCancelledBy__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EndedCancelledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the User who has cancelled or Ended the review.</description>
    <inlineHelpText>Review Ended or Cancelled by user.</inlineHelpText>
    <label>Ended/Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReviewCycles</relationshipName>
    <type>Lookup</type>
</CustomField>