force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__EndedCancelledOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EndedCancelledOn__c</fullName>
    <description>DateTime when the review is cancelled or Ended</description>
    <label>Ended/Cancelled On</label>
    <type>DateTime</type>
</CustomField>