force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__FinalDocumentVersionDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FinalDocumentVersionDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Final document version of the review.</description>
    <inlineHelpText>Final document version of the review.</inlineHelpText>
    <label>Final Document Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Review Cycles (Final Document Version Detail)</relationshipLabel>
    <relationshipName>ReviewCyclesFinal</relationshipName>
    <type>Lookup</type>
</CustomField>