force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__OriginalDocumentVersionDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus__OriginalDocumentVersionDetail__c</fullName>
    <description>Initial document version sent for review.</description>
    <inlineHelpText>Initial document version sent for review.</inlineHelpText>
    <label>Original Document Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Review Cycles</relationshipLabel>
    <relationshipName>ReviewCycles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>