force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__ProtectionLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ProtectionLevel__c</fullName>
    <description>Protection Level applied to the Document</description>
    <inlineHelpText>Protection Level applied to the Document</inlineHelpText>
    <label>Protection Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>