force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__ProtectionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ProtectionType__c</fullName>
    <description>Protection Type</description>
    <label>Protection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>