force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__ReviewCycleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewCycleType__c</fullName>
    <description>Review Cycle Type “MS Teams” for MS Teams integration and “Parallel Review” or null for Parallel review</description>
    <inlineHelpText>Please provide Review Cycle Type</inlineHelpText>
    <label>Review Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parallel Review</fullName>
            </value>
            <value>
                <fullName>MS Teams</fullName>
            </value>
            <value>
                <fullName>Office365 Internal Review</fullName>
            </value>
            <value>
                <fullName>Office365 External Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>