force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewStatus__c</fullName>
    <description>Status of the review cycle</description>
    <inlineHelpText>Status of the review cycle</inlineHelpText>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>