force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__SupportingDocumentIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SupportingDocumentIds__c</fullName>
    <description>Supporting Document Id selected for Review</description>
    <inlineHelpText>Supporting Document Id&apos;s selected for Review</inlineHelpText>
    <label>Supporting Document Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>