force-app/main/default/objects/Apttus__ReviewCycle__c/fields/Apttus__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateId__c</fullName>
    <description>ID of Email Template selected for Parallel Review.</description>
    <inlineHelpText>Email Template Id.</inlineHelpText>
    <label>TemplateId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>